--- a/6_obsession/about.html
+++ b/6_obsession/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<H1> SYNONYM? </H1>
+	<div class="arrow-left"> <a href="index.html" class="click" style="font-family: helvetica; color: white;text-decoration: none;"> ? </a> </div>
 
 </body>
 </html>
