--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<H1> SYNONYM </H1>
-
 	<div class="background"> </div>
+
+	<div class="arrow-right"> <a href="about.html" class="click" style="font-family: helvetica; color: white;text-decoration: none;"> ? </a> </div>
+	
+	<H1> SYNONYM </H1>
+	
 		
 	<div class="blocks">
 		<div class="block1"> </div>
@@ -49,6 +52,5 @@
 		<div class="block36"> </div>
 	</div>
 
-	<div class="button"> <a href="about.html" class="click" style="font-family: futura; color: white;text-decoration: none;"> ? </div>
 </body>
 </html>
