--- a/6_obsession/about.html
+++ b/6_obsession/about.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="background"> </div>
 	<H1> SYNONYM? </H1>
 	<div class="arrow-left"> <a href="index.html" class="click" style="font-family: helvetica; color: white;text-decoration: none;"> ? </a> </div>
 
