--- a/7_html-css-puzzles/puzzle-1/index.html
+++ b/7_html-css-puzzles/puzzle-1/index.html
@@ -2,21 +2,21 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title> P1 - Inline block</title>
+  <title>HTML/CSS Puzzles</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div class="flex-container">
-  		<div class="word he"> He was not </div>
-  		<div class="word bone"> bone and </div>
-  		<div class="word feather"> feather </div>
-  		<div class="word but"> but a perfect idea </div>
-  		<div class="word of"> of freedom </div>
-  		<div class="word and"> and flight, </div>
-  		<div class="word limited"> limited by </div>
-  		<div class="word nothing"> nothing </div>
-  		<div class="word at"> at all. </div>
-  	</div>
+  <div class="container">
+    <div class="box">He was not</div>
+    <div class="box">bone and </div>
+    <div class="box">feather </div>
+    <div class="box">but a perfect idea </div>
+    <div class="box">of freedom </div>
+    <div class="box">and flight,</div>
+    <div class="box">limited by</div>
+    <div class="box">nothing</div>
+    <div class="box">at all.</div>
+  </div>
 
 </body>
 </html>
