--- a/7_html-css-puzzles/puzzle-6/index.html
+++ b/7_html-css-puzzles/puzzle-6/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Your page structure goes here -->
-
+ 	<div class="content">
+  	<p class="black">The spectacle <br> before us was <br>
+  		indeed  <span>sublime</span>. </p></br> 
+	</div>
 </body>
 </html>
