--- a/7_html-css-puzzles/puzzle-3/index.html
+++ b/7_html-css-puzzles/puzzle-3/index.html
@@ -2,11 +2,20 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HTML/CSS Puzzles</title>
+  <title>Puzzle 3</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Your page structure goes here -->
+	<div class="square green one"></div>
+	<div class="square"></div>
+	<div class="square green two"></div>
 
+	<div class="square"></div>
+	<div class="square gray"></div>
+	<div class="square"></div>
+
+	<div class="square green three "></div>
+	<div class="square"></div>
+	<div class="square green four"></div>
 </body>
 </html>
