--- a/7_html-css-puzzles/puzzle-4/index.html
+++ b/7_html-css-puzzles/puzzle-4/index.html
@@ -2,11 +2,15 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HTML/CSS Puzzles</title>
+  <title>Puzzle 4</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!-- Your page structure goes here -->
-
+		<div class="rect">
+			<div class="square one"> </div>
+			<div class="square two"> </div>
+			<div class="square three"></div>
+			<div class="square four"></div>
+		</div>
 </body>
 </html>
