--- a/7_html-css-puzzles/puzzle-6/index.html
+++ b/7_html-css-puzzles/puzzle-6/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>HTML/CSS Puzzles</title>
+  <title>Puzzle 6</title>
   <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet">
 </head>
 <body>
- 	<div class="content">
-  	<p class="black">The spectacle <br> before us was <br>
-  		indeed  <span>sublime</span>. </p></br> 
-	</div>
+	<h1>The spectacle before us was indeed <span> sublime </span> .</h1>
+	<p>– A TRIP TO VENUS, BY JOHN MUNRO</p>
 </body>
 </html>
