--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -6,51 +6,73 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div class="background"> </div>
-
-	<div class="arrow-right"> <a href="about.html" class="click" style="font-family: helvetica; color: white;text-decoration: none;"> ? </a> </div>
-	
 	<H1> SYNONYM </H1>
-	
+
+
 		
-	<div class="blocks">
-		<div class="block1"> </div>
-		<div class="block2"> </div>
-		<div class="block3"> </div>
-		<div class="block4"> </div>
-		<div class="block5"> </div>
-		<div class="block6"> </div>
-		<div class="block7"> </div>
-		<div class="block8"> </div>
-		<div class="block9"> </div>
-		<div class="block10"> </div>
-		<div class="block11"> </div>
-		<div class="block12"> </div>
-		<div class="block13"> </div>
-		<div class="block14"> </div>
-		<div class="block15"> </div>
-		<div class="block16"> </div>
-		<div class="block17"> </div>
-		<div class="block18"> </div>
-		<div class="block19"> </div>
-		<div class="block20"> </div>
-		<div class="block21"> </div>
-		<div class="block22"> </div>
-		<div class="block23"> </div>
-		<div class="block24"> </div>
-		<div class="block25"> </div>
-		<div class="block26"> </div>
-		<div class="block27"> </div>
-		<div class="block28"> </div>
-		<div class="block29"> </div>
-		<div class="block30"> </div>
-		<div class="block31"> </div>
-		<div class="block32"> </div>
-		<div class="block33"> </div>
-		<div class="block34"> </div>
-		<div class="block35"> </div>
-		<div class="block36"> </div>
+	<div class="flex-container">
+		<div><a href="page1.html">A Hard Day</a></div>
+		<div><a href="page2.html">Castaway On The Moon</a></div>
+		<div><a href="page3.html">Coinlocker</a></div>
+		<div><a href="page4.html">Flu</a></div>
 	</div>
+
+	<div class="flex-container">
+		<div><a href="page5.html">For The Emperor</a></div>
+		<div><a href="page6.html">Handmaiden</a></div>
+		<div><a href="page7.html">I Saw The Devil</a></div>
+		<div><a href="page8.html">Memories Of Mother</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page9.html">Miracle In Cell No.7</a></div>
+		<div><a href="page10.html">Miss Granny</a></div>
+		<div><a href="page11.html">Mother</a></div>
+		<div><a href="page12.html">Oasis</a></div>
+	</div>
+		
+	<div class="flex-container">	
+		<div><a href="page13.html">Obsessed</a></div>
+		<div><a href="page14.html">Ode To My Father</a></div>
+		<div><a href="page15.html">Office</a></div>
+		<div><a href="page16.html">Oldboy</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page17.html">Poetry</a></div>
+		<div><a href="page18.html">Sector 7</a></div>
+		<div><a href="page19.html">Seopyonje</a></div>
+		<div><a href="page20.html">Sympathy For Lady Vengeance</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page21.html">The Classified File</a></div>
+		<div><a href="page22.html">The Concubine</a></div>
+		<div><a href="page23.html">The Frontline</a></div>
+		<div><a href="page24.html">The Good The Bad The Weird</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page25.html">The Himalayas</a></div>
+		<div><a href="page26.html">The Host</a></div>
+		<div><a href="page27.html">The Housemaid</a></div>
+		<div><a href="page28.html">The Priests</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page29.html">The Taste Of Money</a></div>
+		<div><a href="page30.html">The Terror Live</a></div>
+		<div><a href="page31.html">The Thieves</a></div>
+		<div><a href="page32.html">The Unjust</a></div>
+	</div>
+
+	<div class="flex-container">
+		<div><a href="page33.html">The Wailing</a></div>
+		<div><a href="page34.html">Thist</a></div>
+		<div><a href="page35.html">Tower</a></div>
+		<div><a href="page36.html">Tunnel</a></div>
+	</div>
+
 
 </body>
 </html>
