--- a/6_obsession/page1.html
+++ b/6_obsession/page1.html
@@ -5,8 +5,54 @@
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
-<body>
-	
+	<body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> A Hard Day </div>
 
-</body>
+		<div class="poster1">
+			<img src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version" style="width: 400px;height:auto;"> 
+		</div>
+
+
+		<div class="poster2">
+			<img src="assets/imgs/1_2.png" alt="Korean Version" style="width: 400px;height:auto;"> 
+		</div>
+
+
+		<div class="column-left">
+			<div class="column-left one"> Title </div>
+			<br>
+			<br>
+			<div class="column-left two"> Director </div>
+			<br>
+			<br>
+			<div class="column-left three"> Summary </div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<div class="column-left four"> Posters </div>
+		</div>
+
+		<div class="column-right">
+			<div class="column-right one"> A Hard Day </div>
+			<br>
+			<br>
+			<div class="column-right two"> Kim Seong-hun </div>
+			<br>
+			<br>
+			<div class="column-right three"> Ko, a corrupt detective whose mother recently died, drives away in the middle of the funeral, having been informed that his squad is being investigated by internal affairs for bribery. He crashes into a homeless man who wanders onto the road, killing him. Fearing manslaughter charges, as he is intoxicated, Ko declines to call the police, and hides the body from a passing patrol car. With the body in his trunk, he returns to the funeral and manages to seal the body into his mother's coffin while escaping detection. A few days later, Ko purposely gets into another crash, which conceals the earlier damage and gives him a reason to visit the repair shop. To the fortune of Ko and his squad, the aforementioned investigation is cancelled by a lieutenant named Park. </div>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<div class="column-right four"> The Korean Poster nanana </div>
+		</div>
+
+	</body>
 </html>
