--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -20,12 +20,12 @@
 	<div class="flex-container">
 		<div><a href="page5.html">For The Emperor</a></div>
 		<div><a href="page6.html">Handmaiden</a></div>
-		<div><a href="page7.html">I Saw The Devil</a></div>
-		<div><a href="page8.html">Memories Of Mother</a></div>
+		<div><a href="page7.html">I Saw <br> The Devil</a></div>
+		<div><a href="page8.html">Memories <br> Of Mother</a></div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page9.html">Miracle In Cell No.7</a></div>
+		<div><a href="page9.html">Miracle In <br> Cell No.7</a></div>
 		<div><a href="page10.html">Miss Granny</a></div>
 		<div><a href="page11.html">Mother</a></div>
 		<div><a href="page12.html">Oasis</a></div>
@@ -33,7 +33,7 @@
 		
 	<div class="flex-container">	
 		<div><a href="page13.html">Obsessed</a></div>
-		<div><a href="page14.html">Ode To My Father</a></div>
+		<div><a href="page14.html">Ode To <br> My Father</a></div>
 		<div><a href="page15.html">Office</a></div>
 		<div><a href="page16.html">Oldboy</a></div>
 	</div>
@@ -42,25 +42,25 @@
 		<div><a href="page17.html">Poetry</a></div>
 		<div><a href="page18.html">Sector 7</a></div>
 		<div><a href="page19.html">Seopyonje</a></div>
-		<div><a href="page20.html">Sympathy For Lady Vengeance</a></div>
+		<div><a href="page20.html">Sympathy <br> For Lady Vengeance</a></div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page21.html">The Classified File</a></div>
-		<div><a href="page22.html">The Concubine</a></div>
-		<div><a href="page23.html">The Frontline</a></div>
-		<div><a href="page24.html">The Good The Bad The Weird</a></div>
+		<div><a href="page21.html">The <br> Classified File</a></div>
+		<div><a href="page22.html">The <br> Concubine</a></div>
+		<div><a href="page23.html">The <br> Frontline</a></div>
+		<div><a href="page24.html">The Good <br> The Bad <br> The Weird</a></div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page25.html">The Himalayas</a></div>
+		<div><a href="page25.html">The <br>Himalayas</a></div>
 		<div><a href="page26.html">The Host</a></div>
 		<div><a href="page27.html">The Housemaid</a></div>
 		<div><a href="page28.html">The Priests</a></div>
 	</div>
 
 	<div class="flex-container">
-		<div><a href="page29.html">The Taste Of Money</a></div>
+		<div><a href="page29.html"> The Taste <br> Of Money</a></div>
 		<div><a href="page30.html">The Terror Live</a></div>
 		<div><a href="page31.html">The Thieves</a></div>
 		<div><a href="page32.html">The Unjust</a></div>
@@ -68,11 +68,8 @@
 
 	<div class="flex-container">
 		<div><a href="page33.html">The Wailing</a></div>
-		<br>
 		<div><a href="page34.html">Thist</a></div>
-		<br>
 		<div><a href="page35.html">Tower</a></div>
-		<br>
 		<div><a href="page36.html">Tunnel</a></div>
 	</div>
 
