--- a/6_obsession/page1.html
+++ b/6_obsession/page1.html
@@ -13,12 +13,12 @@
 		<div class="movietitle"> A Hard Day </div>
 
 		<div class="poster1">
-			<img src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version" style="width: 400px;height:auto;"> 
+			<img src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version" style="width: 55%;height:auto;"> Korean 
 		</div>
 
 
 		<div class="poster2">
-			<img src="assets/imgs/1_2.png" alt="Korean Version" style="width: 400px;height:auto;"> 
+			<img src="assets/imgs/1_2.png" alt="Foriegn Version" style="width: 57%;height:auto;"> 
 		</div>
 
 
