--- a/6_obsession/page2.html
+++ b/6_obsession/page2.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+
+		<div class="movietitle"> Castaway on the Moon </div>
+
+		<div class="poster1">
+			<img src="assets/imgs/2_1_CastawayOnTheMoon.jpg" alt="Korean Version" style="width: 60%;height:auto;"> 
+		</div>
+
+
+		<div class="poster2">
+			<img src="assets/imgs/2_2.jpg" alt="Foreign Version" style="width: 62%;height:auto;"> 
+		</div>
 
 </body>
 </html>
