--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -11,7 +11,17 @@
 
 		
 	<div class="flex-container">
-		<div><a href="page1.html">A Hard Day</a></div>
+		<div>
+			<div>
+				<hr />
+				<hr />
+				<hr />
+				<hr />
+			</div>
+			<div>
+				<a href="page1.html">A Hard Day</a>
+			</div>
+		</div>
 		<div><a href="page2.html">Castaway On The Moon</a></div>
 		<div><a href="page3.html">Coinlocker</a></div>
 		<div><a href="page4.html">Flu</a></div>
