--- a/6_obsession/page1.html
+++ b/6_obsession/page1.html
@@ -4,6 +4,7 @@
 	<title> Sector 7 </title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet" type='text/css'>
 </head>
 	<body>
 		<div class="head">
@@ -12,46 +13,41 @@
 		
 		<div class="movietitle"> A Hard Day </div>
 
-		<div class="poster1">
-			<img src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version" style="width: 55%;height:auto;"> Korean 
+		<div class="centeredposter"> 
+			<img src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version"> 
 		</div>
 
-
-		<div class="poster2">
-			<img src="assets/imgs/1_2.png" alt="Foriegn Version" style="width: 57%;height:auto;"> 
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/1_1_AHardDay.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/1_2.png" alt="Foriegn Version"> 
 		</div>
 
-
-		<div class="column-left">
-			<div class="column-left one"> Title </div>
-			<br>
-			<br>
-			<div class="column-left two"> Director </div>
-			<br>
-			<br>
-			<div class="column-left three"> Summary </div>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<div class="column-left four"> Posters </div>
+		<div> 
+			<h3> Title </h3>
+			<p> A Hard Day </p>
 		</div>
 
-		<div class="column-right">
-			<div class="column-right one"> A Hard Day </div>
+		<div class="white">
+			<h3> Title </h3>
+			<p> A Hard Day </p>
 			<br>
 			<br>
-			<div class="column-right two"> Kim Seong-hun </div>
+			<h3> Director </h3>
+			<p>Kim Seong-hun</p>
 			<br>
 			<br>
-			<div class="column-right three"> Ko, a corrupt detective whose mother recently died, drives away in the middle of the funeral, having been informed that his squad is being investigated by internal affairs for bribery. He crashes into a homeless man who wanders onto the road, killing him. Fearing manslaughter charges, as he is intoxicated, Ko declines to call the police, and hides the body from a passing patrol car. With the body in his trunk, he returns to the funeral and manages to seal the body into his mother's coffin while escaping detection. A few days later, Ko purposely gets into another crash, which conceals the earlier damage and gives him a reason to visit the repair shop. To the fortune of Ko and his squad, the aforementioned investigation is cancelled by a lieutenant named Park. </div>
+			<h3> Summary </h3>
+			<p> 
+				Ko, a corrupt detective whose mother recently died, drives away in the middle of the funeral, having been informed that his squad is being investigated by internal affairs for bribery. He crashes into a homeless man who wanders onto the road, killing him. Fearing manslaughter charges, as he is intoxicated, Ko declines to call the police, and hides the body from a passing patrol car. With the body in his trunk, he returns to the funeral and manages to seal the body into his mother's coffin while escaping detection. A few days later, Ko purposely gets into another crash, which conceals the earlier damage and gives him a reason to visit the repair shop. To the fortune of Ko and his squad, the aforementioned investigation is cancelled by a lieutenant named Park. 
+			</p>
 			<br>
 			<br>
-			<br>
-			<br>
-			<br>
-			<div class="column-right four"> The Korean Poster nanana </div>
+			<h3> Posters </h3>
+			<p> The Korean Poster nanana </p>
+		</div>
+
+		<div>
+			<a href="page2.html">
 		</div>
 
 	</body>
