--- a/6_obsession/index.html
+++ b/6_obsession/index.html
@@ -12,15 +12,8 @@
 		
 	<div class="flex-container">
 		<div>
-			<div>
-				<hr />
-				<hr />
-				<hr />
-				<hr />
-			</div>
-			<div>
-				<a href="page1.html">A Hard Day</a>
-			</div>
+			<div><a href="page1.html">A Hard Day</a></div>
+			<div class="additional-poster"></div>
 		</div>
 		<div><a href="page2.html">Castaway On The Moon</a></div>
 		<div><a href="page3.html">Coinlocker</a></div>
