--- a/6_obsession/page10.html
+++ b/6_obsession/page10.html
@@ -6,6 +6,52 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle">Miss Granny </div>
+
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/10_1_MissGranny.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/10_1_MissGranny.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/10_2_Japanese.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> Miss Granny</p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Hwang Dong-hyuk</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				Oh Mal-soon, a 74-year-old widow, lives with her son and his family. Foul-mouthed, stubborn, controlling and shameless, she has a difficult relationship with her depressed daughter-in-law Ae-ja, but is very proud of her son Hyun-chul, who became a university professor of gerontology, and whom she raised by herself against all odds. One day, Ae-ja gets hospitalized after suddenly collapsing. Her doctors strongly advise her to live apart from Mal-soon. On the day she is told by her son that she is being sent to a nursing home, the dismayed Mal-soon wanders the streets and comes across a mysterious photo studio that claims it captures the moments of one's youth. She takes what she believes will be her last self-portrait for her not-so-far-off funeral, but when she comes out of the studio, Mal-soon is dumbfounded by her own reflection in the mirror: she's now a fresh, young 20-year-old woman.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="next">
+			<a href="page11.html"></a>
+		</div>
+
+		<div class="back">
+			<a href="page9.html"></a>
+		</div>
 
 </body>
 </html>
