--- a/6_obsession/page2.html
+++ b/6_obsession/page2.html
@@ -12,14 +12,50 @@
 
 		<div class="movietitle"> Castaway on the Moon </div>
 
-		<div class="poster1">
-			<img src="assets/imgs/2_1_CastawayOnTheMoon.jpg" alt="Korean Version" style="width: 60%;height:auto;"> 
+		<div class="centeredposter">
+			<p style="text-align: center;"> <img src="assets/imgs/2_5.png" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/2_1_CastawayOnTheMoon.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/2_2.jpg" alt="Foriegn Version"> 
 		</div>
 
-
-		<div class="poster2">
-			<img src="assets/imgs/2_2.jpg" alt="Foreign Version" style="width: 62%;height:auto;"> 
+		<div class="flex two">
+			<img class="poster margin" src="assets/imgs/2_3.jpg" alt="Foriegn Version">
+			<img class="poster" src="assets/imgs/2_4.png" alt="Foriegn Version">
 		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular">Castaway On The Moon</p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Lee Hae-jun</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				Kim Seong-geun (Jung Jae-young) is deep in debt and his life seems completely hopeless. He jumps off a bridge into the Han River and washes up on the shore of Bamseom, which lies directly below the bridge. After searching the island he finds it is filled mostly with vegetation and surrounded by the city but too far to shout and he can't swim. He finds a duck-shaped boat and begins to like living on the island, free of his debt and worries of city life, though it is not easy.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="back">
+			<a href="page1.html"></a>
+		</div>
+		<div class="next">
+			<a href="page3.html"></a>
+		</div>
+		
+
 
 </body>
 </html>
