--- a/6_obsession/page4.html
+++ b/6_obsession/page4.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> Flu </div>
 
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/4_1_Flu.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/4_1_Flu.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/4_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> Flu </p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Kim Sung-su</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				The opening scene shows a group of illegal immigrants that are being prepared to be smuggled to South Korea inside a shipping container. As they are about to be sent overseas, one of the traffickers notices people coughing. After the immigrants deny any illness, he seals the container which is then sent to Korea. 9 days later, on May 1, the container reaches Pyongtaek harbor, and is transported inland.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="back">
+			<a href="page3.html"></a>
+		</div>
+		<div class="next">
+			<a href="page5.html"></a>
+		</div>
+		
 </body>
 </html>
