--- a/6_obsession/page5.html
+++ b/6_obsession/page5.html
@@ -6,6 +6,50 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> For The Emperor </div>
 
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/5_1_ForTheEmperor.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/5_1_ForTheEmperor.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/5_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> For The Emperor </p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Park Sang-joon</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				Promising baseball player Lee Hwan was kicked out of his league and lost everything after being implicated in a match fixing scandal. While waiting for an opportunity to make a comeback, the disgraced pro gets recruited into working for Emperor Capital, the biggest private loan company in Busan. Its loan shark boss, Jeong Sang-ha leads his organized crime mob with a combination of authority, loyalty and cold-bloodedness. Sang-ha takes the naïve young man under his wing, and fascinated by money and power, Hwan soon finds himself climbing the ranks at Emperor Capital. Hwan and Sang-ha successfully take control of all Busan gangs, collecting money through gambling and lending, and killing hundreds of people in the process. Hwan also falls under the charms of a bar owner, Cha Yeon-soo. But when Yeon-soo suddenly vanishes, Hwan suspects that Sang-ha had something to do with her disappearance, and begins to face off against his mentor in a cutthroat, winner-takes-all rivalry.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="back">
+			<a href="page4.html"></a>
+		</div>
+		<div class="next">
+			<a href="page6.html"></a>
+		</div>
+		
 </body>
 </html>
