--- a/6_obsession/page6.html
+++ b/6_obsession/page6.html
@@ -6,6 +6,57 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle">Handmaiden</div>
 
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/6_1_Handmaiden.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/6_1_Handmaiden.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/6_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular">Handmaiden</p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Park Sang-joon</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				In Japanese-occupied Korea, a conman operating under the sobriquet of "Count Fujiwara" plans to seduce a Japanese heiress named Lady Hideko, then marry her and commit her to an asylum in order to steal her inheritance. He hires a pickpocket named Sook-hee from a family of con artists to become Hideko's maid and encourage Hideko to marry him.
+				<br>
+				<br>
+				Hideko lives with her authoritarian Uncle Kouzuki. Kouzuki makes money by selling rare books, and he has Hideko give readings of the books for potential buyers. Sook-hee and Hideko grow closer, and Hideko allows Sook-hee to wear her dresses and jewelry. When Hideko asks Sook-hee what married life will be like, Sook-hee makes passionate love to her, promising her the same pleasures with her new husband. Sook-hee begins expressing reluctance about the plan, but when Hideko herself feels that she cannot go through with the marriage, Sook-hee insists she do so, causing Hideko to slap her and run away in frustration.
+				<br>
+				<br>
+				When Kouzuki leaves on business for a week, Hideko and Fujiwara elope. After cashing out Hideko's inheritance, it is then revealed that Hideko and Fujiwara double crossed Sook-hee and has convinced the asylum that she is the "Countess," and have her committed in Hideko's stead.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+
+		<div class="back">
+			<a href="page5.html"></a>
+		</div>
+		<div class="next">
+			<a href="page7.html"></a>
+		</div>
+		
 </body>
 </html>
