--- a/6_obsession/page7.html
+++ b/6_obsession/page7.html
@@ -6,6 +6,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> I Saw The Devil </div>
+
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/7_1_ISawTheDevil.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/7_1_ISawTheDevil.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/7_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> I Saw The Devil </p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Kim Jee-woon</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				Academy-bus driver Jang Kyung-chul happens upon Jang Joo-yun one snowy night and offers to help fix her flat tire. Kyung-chul kills her and scatters her body parts. When a boy discovers one of Joo-yun's ears, the police are called in under the command of Section Chief Oh and Squad Chief Jang, the latter of whom is the father of Joo-yun. Kim Soo-hyun, a secret service agent of the National Intelligence Service (NIS) and Joo-yun's fiancé, vows to track down and take vengeance on Joo-yun's murderer.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+
+		<div class="back">
+			<a href="page5.html"></a>
+		</div>
+		<div class="next">
+			<a href="page8.html"></a>
+		</div>
+		
 
 </body>
 </html>
