--- a/6_obsession/page8.html
+++ b/6_obsession/page8.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Memories Of Mother</title>
+	<title>Memories Of Murder</title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> Memories of Murder </div>
+
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/8_1_MemoriesOfMurder.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/8_1_MemoriesOfMurder.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/8_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> Memories of Murder </p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Bong Joon-ho</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				In October 1986, a young woman is found raped and murdered in a ditch near a field. Soon after, another woman is found raped and murdered in a field. Local detective Park Doo-man, not having dealt with such a serious case before, is overwhelmed; key evidence is improperly collected, the police's investigative methods are suspect, and their forensic technology is near non-existent. Park claims he has a way of determining suspects by eye contact. He learns from his wife that a a scarred mentally handicapped boy, Baek Kwang-ho, resides in the town, and decides to question him first. He finds him and uses his eye contact method, instinctively thinking Baek is responsible. Park has his partner Cho beat confessions out of Baek, going so far as to make him dig his own grave. They secretly record him talking about one of the murders, and decide that he is responsible.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="next">
+			<a href="page9.html"></a>
+		</div>
+
+		<div class="back">
+			<a href="page7.html"></a>
+		</div>
 
 </body>
 </html>
