--- a/6_obsession/page9.html
+++ b/6_obsession/page9.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Miracle In cell No.7</title>
+	<title>Miracle In Cell No.7</title>
 	<link rel="icon" href="assets/imgs/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<body>
+		<div class="head">
+			<a href="index.html" style="color: white; font-family: helvetica; font-weight: bold;"> SYNONYM </a>
+		</div>
+		
+		<div class="movietitle"> Miracle In Cell No.7</div>
+
+		<div class="centeredposter"> 
+			<p style="text-align: center;"> <img src="assets/imgs/9_1_MiracleInCellNo7.jpg" alt="Korean Version" style="width: 50%;"> </p>
+		</div>
+
+		<br>
+		<br>
+
+		<div class="flex">
+			<img class="poster margin" src="assets/imgs/9_1_MiracleInCellNo7.jpg" alt="Korean Version"> 
+			<img class="poster" src="assets/imgs/9_2.jpg" alt="Foriegn Version"> 
+		</div>
+
+		<br>
+		<br>
+		<br>
+
+		<div class="white">
+			<h3 class="bold"> Title </h3>
+			<p class="regular"> Miracle In Cell No.7</p>
+			<br>
+			<h3 class="bold"> Director </h3>
+			<p class="regular">Lee Hwan-kyung</p>	
+			<br>
+			<h3 class="bold"> Summary </h3>
+			<p class="regular"> 
+				Lee Yong-go is a mentally impaired father with the intellect of a six-year-old, who lives in a run-down house along with his daughter Ye-seung. One day, he gets into a physical altercation with the police commissioner, who has just purchased the last Sailor Moon backpack for his daughter, a gift Yong-go was saving up to buy for Ye-seung. Soon after, the police commissioner's daughter dies in a freak accident, in which she slips on ice and suffers a fatal blow to the back of her head while she is taking Yong-go to another store that sells the same backpack. When he tries to resuscitate her, a woman witnesses him and mistakes him to be molesting her. Yong-go is falsely accused of the abduction, murder, and rape of a minor. The police quickly take advantage of his disability and force him to admit to the crimes, while ignoring exonerating evidence. Yong-go is imprisoned and assigned to Cell No. 7, the harshest cell in a maximum security prison.
+			</p>
+			<br>
+			<h3 class="bold"> Posters </h3>
+			<p class="regular"> The Korean version  </p>
+		</div>
+
+		<div class="next">
+			<a href="page10.html"></a>
+		</div>
+
+		<div class="back">
+			<a href="page8.html"></a>
+		</div>
 
 </body>
 </html>
